src/app/globals.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

// Default theme
@import "@splidejs/react-splide/css";

// or other themes
@import "@splidejs/react-splide/css/skyblue";
@import "@splidejs/react-splide/css/sea-green";

// or only core styles
@import "@splidejs/react-splide/css/core";
// FONT-FACE
@font-face {
  font-family: fontForProject;
  src: url("../fonts/Sen-Regular.ttf");
  font-weight: 600;
}

@font-face {
  font-family: fontForProject;
  src: url("../fonts/Sen-Bold.ttf");
  font-weight: 700;
}

@font-face {
  font-family: fontForProject;
  src: url("../fonts/Sen-ExtraBold.ttf");
  font-weight: 800;
}

@layer base {
  html {
    font-family: fontForProject, system-ui, sans-serif;
  }
}
// STYLES
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button,
input[type="number"] {
  -webkit-appearance: none !important;
  margin: 0 !important;
}
#hs-input-with-leading-and-trailing-icon {
  -webkit-appearance: none !important;
  margin: 0 !important;
  appearance: none !important;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.result-animation {
  // display: flex;
  // justify-content: center;
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translate(-40%, -50%);
}

.animate-result {
  animation: result-animation 2100ms ease-in-out forwards;
}

.loader {
  // Variables
  --background: linear-gradient(135deg, #23c4f8, #275efe);
  --shadow: rgba(39, 94, 254, 0.28);
  --text: #6c7486;
  --page: rgba(255, 255, 255, 0.36);
  --page-fold: rgba(255, 255, 255, 0.52);
  --duration: 3s;

  // Base styles
  width: 200px;
  height: 140px;
  position: relative;
  margin: auto;

  // Pseudo-elements
  &:before,
  &:after {
    --r: -6deg;
    content: "";
    position: absolute;
    bottom: 8px;
    width: 120px;
    top: 80%;
    box-shadow: 0 16px 12px var(--shadow);
    transform: rotate(var(--r));
  }

  &:before {
    left: 4px;
  }

  &:after {
    --r: 6deg;
    right: 4px;
  }

  // Main div
  div {
    width: 100%;
    height: 100%;
    border-radius: 13px;
    position: relative;
    z-index: 1;
    perspective: 600px;
    box-shadow: 0 4px 6px var(--shadow);
    background-image: var(--background);

    // UL
    ul {
      margin: 0;
      padding: 0;
      list-style: none;
      position: relative;

      // LI items
      li {
        --r: 180deg;
        --o: 0;
        --c: var(--page);
        position: absolute;
        top: 10px;
        left: 10px;
        transform-origin: 100% 50%;
        color: var(--c);
        opacity: var(--o);
        transform: rotateY(var(--r));
        -webkit-animation: var(--duration) ease infinite;
        animation: var(--duration) ease infinite;

        // Different animations for nth-child elements
        &:nth-child(2) {
          --c: var(--page-fold);
          -webkit-animation-name: page-2;
          animation-name: page-2;
        }

        &:nth-child(3) {
          --c: var(--page-fold);
          -webkit-animation-name: page-3;
          animation-name: page-3;
        }

        &:nth-child(4) {
          --c: var(--page-fold);
          -webkit-animation-name: page-4;
          animation-name: page-4;
        }

        &:nth-child(5) {
          --c: var(--page-fold);
          -webkit-animation-name: page-5;
          animation-name: page-5;
        }

        // SVG icon
        svg {
          width: 90px;
          height: 120px;
          display: block;
        }

        // First and last child styles
        &:first-child {
          --r: 0deg;
          --o: 1;
        }

        &:last-child {
          --o: 1;
        }
      }
    }
  }
}

.loader span {
  display: block;
  left: 0;
  right: 0;
  top: 100%;
  margin-top: 20px;
  text-align: center;
}

.opacity-fade {
  animation: opacity-fade 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
}

.enter-right-to-left {
  transform: translateY(2rem);
  animation: slide-left 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
}

// MEDIA
@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}
@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}
// Styles and animation for mobile
@media (max-width: 768px) {
  .result-animation {
    display: flex;
    justify-content: center;
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-40%, -50%);
  }
  .animate-result {
    animation: result-animation-small 2100ms ease-in-out forwards;
  }
  .enter-right-to-left {
    animation: slide-left-small 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
  }
  .splide {
    max-height: 25rem;
  }
  .splide__arrow {
    margin-top: 1rem;
  }
}

// KEYFRAMES
@keyframes result-animation {
  0% {
    transform: scale(1) translateX(400%);
  }
  25% {
    transform: scale(1) translateX(20%);
  }
  50% {
    transform: scale(1.5) translateX(0%);
  }
  75% {
    transform: scale(1) translateX(-80%);
  }
  100% {
    transform: scale(1) translateX(-350%);
  }
}

@keyframes result-animation-small {
  0% {
    transform: scale(1) translateX(45%);
  }
  25% {
    transform: scale(1) translateX(10.5%);
  }
  50% {
    transform: scale(1.5) translateX(-20%);
  }
  75% {
    transform: scale(1) translateX(-70%);
  }
  100% {
    transform: scale(1) translateX(-250%);
  }
}

@keyframes page-2 {
  0% {
    transform: rotateY(180deg);
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  35%,
  100% {
    opacity: 0;
  }

  50%,
  100% {
    transform: rotateY(0deg);
  }
}

@keyframes page-3 {
  15% {
    transform: rotateY(180deg);
    opacity: 0;
  }

  35% {
    opacity: 1;
  }

  50%,
  100% {
    opacity: 0;
  }

  65%,
  100% {
    transform: rotateY(0deg);
  }
}

@keyframes page-4 {
  30% {
    transform: rotateY(180deg);
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  65%,
  100% {
    opacity: 0;
  }

  80%,
  100% {
    transform: rotateY(0deg);
  }
}

@keyframes page-5 {
  45% {
    transform: rotateY(180deg);
    opacity: 0;
  }

  65% {
    opacity: 1;
  }

  80%,
  100% {
    opacity: 0;
  }

  95%,
  100% {
    transform: rotateY(0deg);
  }
}

@keyframes slide-left {
  0% {
    opacity: 0;
    transform: translate(15rem, 3rem);
  }
  25% {
    opacity: 1;
    transform: translate(-39rem, 3rem);
  }
  75% {
    opacity: 1;
    transform: translate(-39rem, 3rem);
  }
  100% {
    opacity: 0;
    transform: translate(-70rem, 3rem);
  }
}

@keyframes slide-left-small {
  0% {
    opacity: 0;
    transform: translate(10rem, 3rem);
  }
  25% {
    opacity: 1;
    transform: translate(-50%, 3rem);
  }
  75% {
    opacity: 1;
    transform: translate(-50%, 3rem);
  }
  100% {
    opacity: 0;
    transform: translate(-50rem, 3rem);
  }
}

@keyframes opacity-fade {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 1;
  }
  80% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.splide {
  padding-top: 0;
  height: 50%;
}
.splide__list {
  transform: translateX(25%);
}
.splide__pagination {
  top: 180%;
}
.splide__arrow svg {
  fill: rgba(1, 65, 255, 0.4);
}
.splide__arrow:hover svg {
  fill: rgba(1, 65, 255, 0.8);
}
.splide__arrow svg:hover {
  fill: rgba(1, 65, 255, 0.8);
}

// Rental loading
.pulsing-6 {
  width: 200px;
  height: 200px;
  position: relative;
  transform: rotate(45deg);
}
.pulsing-6:before,
.pulsing-6:after {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 50% 50% 0 50%;
  background: #514b82;
  -webkit-mask: radial-gradient(circle 50px at 50% 50%, #0000 94%, #000);
  mask: radial-gradient(circle 50px at 50% 50%, #0000 94%, #000);
}
.pulsing-6:after {
  animation: pl6 1s infinite;
  transform: perspective(750px) translateZ(0px); // Adjusted perspective here
}

@keyframes pl6 {
  to {
    transform: perspective(750px) translateZ(375px); // Adjusted perspective and translation here
    opacity: 0;
  }
}

